@@ -4,6 +4,8 @@ OpenDNSSEC trunk
 
 * ods-ksmutil: update command split so that individual configuration files can
   be updated separately.
+* ods-ksmutil: "ds-seen" renamed to "ksk-roll" which is a more accurate 
+  description of its effect. (ds-seen will reappear in v1.1)
 
 Bugfixes:
 * Signer Engine: Output better information if the HSM fails with the signing.
